[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.8
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -20.0
margin_bottom = -20.0

[node name="ButtonStart" type="Button" parent="VBoxContainer"]
margin_right = 184.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../ButtonQuit")
text = "Jogar"

[node name="ButtonOptions" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 184.0
margin_bottom = 44.0
text = "Opções"

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 184.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../ButtonStart")
text = "Sair"

[connection signal="pressed" from="VBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonOptions" to="." method="_on_ButtonOptions_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
